--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -8,10 +8,7 @@ $data = array(
 Jien::model("Post")->save($data);
 
 $posts = Jien::model("User")
-	->leftJoin("Post p", "p.user_id = u.user_id")
-	->where("p.user_id IS NOT NULL")
-	->groupBy("u.gender")
-	->having("u.active=1")
+	->withPosts()
 	->getAll();
 Jien::debug($posts);
 
