--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,51 +1,5 @@
 Hello World!!
 <?php
-$data = array(
-	"user_id"	=> 17,
-	"subject"	=>	'kids are hard',
-	"message"	=>	'take care of them',
-);
-Jien::model("Post")->save($data);
-
-$posts = Jien::model("User")
-	->withPosts()
-	->getAll();
-Jien::debug($posts);
-
-
-// get a single record by it's primary id
-$user = Jien::model("User")->getAll("gender='f'");
-/*
-// get a single record with a where clause
-$data = Jien::model("User")->where("u.username LIKE '%jae%'")->get();
-
-// get all records
-$data = Jien::model("User")->getAll();
-
-// get all records and limit to 20
-$data = Jien::model("User")->limit(20)->getAll();
-
-// get all records and limit to 20 and offset by 10
-$data = Jien::model("User")->limit(20, 10)->getAll();
-
-// sort by username desc
-$data = Jien::model("User")->limit(20)->orderBy('u.username desc')->getAll();
-
-// where clause for male only
-$data = Jien::model("User")->where("u.gender = 'm'")->orderBy('u.user_id asc')->getAll();
-
-// where clause for male or female
-$data = Jien::model("User")->where("u.gender = 'm' OR u.gender='f'")->getAll();
-
-// alternatively ...
-$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->orderBy('u.username asc')->getAll();
-
-
-// get all records and where clause for male only and add a or where clause
-$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->getAll();
-
-// get all records and where clause for male only and add a or where clause
-$data = Jien::model("User")->where("u.gender = 'm'")->orWhere("u.gender = 'f'")->getAll();*/
-
-
+Jien::debug($this->data['rows']);
 ?>
+<?php echo $this->paginationControl($this->data['paginator'], 'Sliding', 'pagination.phtml'); ?>
