JIEN-6 Added Pagination to Jien Model

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,5 +1,6 @@
 Hello World!!
-<?php
-Jien::debug($this->data['rows']);
-?>
 <?php echo $this->paginationControl($this->data['paginator'], 'Sliding', 'pagination.phtml'); ?>
+<?php
+Jien::debug($this->data['records']);
+?>
+
