JIEN-9 JIEN-10 setting up admin

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -2,5 +2,7 @@ Hello World!!
 <?php echo $this->paginationControl($this->data['paginator'], 'Sliding', 'pagination.phtml'); ?>
 <?php
 Jien::debug($this->data['records']);
+
+Jien::outputDbProfiler();
 ?>
 
