--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,8 +1,7 @@
 Hello World!!
-<?php echo $this->paginationControl($this->data['paginator'], 'Sliding', 'pagination.phtml'); ?>
+<?php if(!empty($this->data['paginator'])) echo $this->paginationControl($this->data['paginator'], 'Sliding', 'pagination.phtml'); ?>
 <?php
 Jien::debug($this->data['records']);
-
 Jien::outputDbProfiler();
 ?>
 
