--- a/application/views/scripts/admin/dashboard.phtml
+++ b/application/views/scripts/admin/dashboard.phtml
@@ -1,16 +1,14 @@
-<div class="container" style='padding-top: 80px;'>
 
-	<div class="content">
-		<div class="page-header">
-		  <h1>Dashboard<small> </small></h1>
-		</div>
-		<div class="row">
-		  <div class="span10">
-		    <p>
-		    	This is your daily stats
-		    </p>
-		  </div>
-		</div>
+<div class="content">
+	<div class="page-header">
+	  <h1>Dashboard<small> </small></h1>
 	</div>
-	
+	<div class="row">
+	  <div class="span10">
+	    <p>
+	    	View stats
+	    </p>
+	  </div>
+	</div>
 </div>
+		
