--- a/application/views/scripts/admin/index.phtml
+++ b/application/views/scripts/admin/index.phtml
@@ -10,15 +10,16 @@
   </div>
 </header>
 
-<div class="container" style='padding-top: 40px;'>
+<div class="container" style='padding-top: 20px;'>
 
 	<div class="content">
 		<div class="page-header">
-		  <h1>Please Proceed to Log-in<small> </small></h1>
+		  <h1>Wait ...<small> You are not logged in </small></h1>
 		</div>
 		<div class="row">
 		  <div class="span10">
-		    <p>If you are having difficulty, please contact the administrator</p>
+		    <p>If you are having difficulty, please contact the site administrator.</p>
+		    <p>Click here if you <a href="/admin/forgot-pass">forgot your password</a>.</p>
 		  </div>
 		</div>
 	</div>
