--- a/application/views/scripts/admin/users.phtml
+++ b/application/views/scripts/admin/users.phtml
@@ -1,33 +1,13 @@
-<div class="left" style="width:20%;">
 
-	<div class="content">
-	
-		<div>
-			<h4>Users</h4>
-		</div>
-		
-		<div class="row">
-		  <div class="span10">
-		  	<ul class="content_menu menu">
-		  		<li><a class='active' href="/admin/users">List all users</a></li>
-		  		<li><a href="/admin/users/add">Add a new user</a></li>
-		  	</ul>
-		  	
-		  </div>
-		</div>
-		
-	</div>
-	
-</div>
 
 <div class="left">
 
 	<div class="content">
 
 		<div class="page-header">
-		  <h3>
-		  	Listing all users <small></small>
-		  </h3>
+			<h3>
+		  		Listing all users <small></small> <span class='right'><a href='/admin/user'>Add a user</a></span>
+		  	</h3>
 		</div>
 		
 		<div class="row">
@@ -37,9 +17,9 @@
 		</div>
 		
 		<div class="row">
-		  	<div class="span12">
+		  	<div class="span15">
 		  	
-		  		<table class="zebra-striped" id="sortTableExample">
+		  		<table class="zebra-striped">
 			        <thead>
 			          <tr>
 			            <th class="header">#</th>
@@ -59,8 +39,8 @@
 			            <td><?php echo $value['role']; ?></td>
 			            <td><?php echo date("m/d/y", strtotime($value['created'])); ?></td>
 			            <td>
-			            	<a href="#" class="btn blue">Edit</a>
-			            	<a href="#" class="btn red">Delete</a>
+			            	<a href="/admin/user/id/<?php echo $value['user_id']; ?>" class="btn blue">Edit</a>
+			            	<a href="/admin/delete/?model=User&id=<?php echo $value['user_id']; ?>" class="btn red">Remove</a>
 			            </td>
 			          </tr>
 			          <?php } ?>
