JIEN-9 Initial barebone admin finished

--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -36,6 +36,8 @@
           <ul class="nav" id="main_menu">
             <li class="active"><a href="/admin">Home</a></li>
             <li><a href="/admin/users">Users</a></li>
+            <li><a href="/admin/posts">Posts</a></li>
+            <li><a href="/admin/pages">Pages</a></li>
           </ul>
           
           <?php if(!empty($_SESSION['user'])){ ?>
