--- a/application/views/scripts/admin/pages.phtml
+++ b/application/views/scripts/admin/pages.phtml
@@ -24,19 +24,19 @@
 			          <tr>
 			            <th class="header">#</th>
 			            <th class="header">Username</th>
-			            <th class="header">Email</th>
-			            <th class="header">Role</th>
-			            <th class="header">Joined</th>
+			            <th class="header">Title</th>
+			            <th class="header">Content</th>
+			            <th class="header">Created</th>
 			            <th class="header">Action</th>
 			          </tr>
 			        </thead>
 			        <tbody>
 			        <?php foreach($this->data['records'] AS $key=>$value){ ?>
 			        <tr>
-			            <td><?php echo $value['user_id']; ?></td>
+			            <td><?php echo $value['page_id']; ?></td>
 			            <td><?php echo $value['username']; ?></td>
-			            <td><?php echo $value['email']; ?></td>
-			            <td><?php echo $value['role']; ?></td>
+			            <td><?php echo $value['page_title']; ?></td>
+			            <td><?php echo $value['page_content']; ?></td>
 			            <td><?php echo date("m/d/y", strtotime($value['created'])); ?></td>
 			            <td>
 			            	<a href="/admin/<?php echo strtolower($this->model); ?>/id/<?php echo $value[strtolower($this->model).'_id']; ?>" class="btn blue">Edit</a>
