--- a/application/views/scripts/admin/posts.phtml
+++ b/application/views/scripts/admin/posts.phtml
@@ -23,20 +23,20 @@
 			        <thead>
 			          <tr>
 			            <th class="header">#</th>
-			            <th class="header">Username</th>
-			            <th class="header">Email</th>
-			            <th class="header">Role</th>
-			            <th class="header">Joined</th>
+			            <th class="header">User</th>
+			            <th class="header">Subject</th>
+			            <th class="header">Message</th>
+			            <th class="header">Created</th>
 			            <th class="header">Action</th>
 			          </tr>
 			        </thead>
 			        <tbody>
 			        <?php foreach($this->data['records'] AS $key=>$value){ ?>
 			        <tr>
-			            <td><?php echo $value['user_id']; ?></td>
+			            <td><?php echo $value['post_id']; ?></td>
 			            <td><?php echo $value['username']; ?></td>
-			            <td><?php echo $value['email']; ?></td>
-			            <td><?php echo $value['role']; ?></td>
+			            <td><?php echo $value['subject']; ?></td>
+			            <td><?php echo $value['message']; ?></td>
 			            <td><?php echo date("m/d/y", strtotime($value['created'])); ?></td>
 			            <td>
 			            	<a href="/admin/<?php echo strtolower($this->model); ?>/id/<?php echo $value[strtolower($this->model).'_id']; ?>" class="btn blue">Edit</a>
