--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -45,6 +45,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle">jaequery</a>
               <ul class="dropdown-menu">
+              	<li><a href="/admin/user/id/<?php echo $_SESSION['user']->user_id; ?>">Settings</a></li>
                 <li><a href="/auth/logout" class='trig_logout'>Log-out</a></li>
               </ul>
             </li>
@@ -73,10 +74,8 @@
 		</div>
 	</div>
 	
-	<div class="container" style='padding-top: 10px;'>
-	  	<footer>
-	    	<p>&copy; Powered by Jien Framework. All rights reserved.</p>
-	  	</footer>
+	<div class="container" style="padding-left: 40px;">
+	    	<p> Powered by Jien Framework &copy; All rights reserved.</p>
 	</div>
     
 	
