JIEN-16 fixed a user auth bug

--- a/application/views/scripts/admin/page.phtml
+++ b/application/views/scripts/admin/page.phtml
@@ -3,7 +3,7 @@
 	<div class="content">
 	
 		<div>
-			<h4><?php echo $this->model; ?>s</h4>
+			<h4><a href="/admin/<?php echo strtolower($this->model); ?>s"><-- Back to <?php echo $this->model; ?>s</a></h4>
 		</div>
 		
 		<div class="row">
