--- a/application/layouts/scripts/admin-loggedout.phtml
+++ b/application/layouts/scripts/admin-loggedout.phtml
@@ -66,7 +66,7 @@
 		e.preventDefault();
 		var form = site.util.serializeForm($(this));
 		$.post("/auth/login", form, function(res){
-			if(res.result.code == 200){
+			if(res.status.code == 200){
 				window.location.href = '/admin/dashboard';	
 			}else{
 				alert('invalid user/pass');
