--- a/application/layouts/scripts/admin-loggedout.phtml
+++ b/application/layouts/scripts/admin-loggedout.phtml
@@ -1,34 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Jien</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
-<link rel="stylesheet" href="http://static.jquery.com/ui/css/demo-docs-theme/ui.theme.css" type="text/css" media="all" />
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-dropdown.js" type="text/javascript"></script>
-<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-twipsy.js" type="text/javascript"></script>
-<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-scrollspy.js" type="text/javascript"></script>
-<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-alerts.js" type="text/javascript"></script>
-<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-popover.js" type="text/javascript"></script>
-<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-tabs.js" type="text/javascript"></script>
-<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-modal.js" type="text/javascript"></script>
-<script src="/js/site.js" type="text/javascript"></script>
-<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
-<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/docs.css">
-<link rel="stylesheet" href="/css/admin.css">
-<link rel="stylesheet" href="/css/pagination.css">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Jien</title>
+	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+	<script src="/js/jien.js" type="text/javascript"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-dropdown.js" type="text/javascript"></script>
+	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-twipsy.js" type="text/javascript"></script>
+	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-scrollspy.js" type="text/javascript"></script>
+	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-alerts.js" type="text/javascript"></script>
+	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-popover.js" type="text/javascript"></script>
+	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-tabs.js" type="text/javascript"></script>
+	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-modal.js" type="text/javascript"></script>
+	
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="http://static.jquery.com/ui/css/demo-docs-theme/ui.theme.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/docs.css">
+	<link rel="stylesheet" href="/css/admin.css">
+	<link rel="stylesheet" href="/css/pagination.css">
+	
+	<script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
 
 </head>
 
  <body>
  
-	<div class="alert-message warning fade in hide" data-alert="alert">
-		<a class="close" href="#">x</a>
-		<p>Hola there</p>
-	</div>
-
     <div class="topbar">
       <div class="fill">
         <div class="container">
@@ -64,12 +64,12 @@
   	
   	$('#login_form').submit(function(e){
 		e.preventDefault();
-		var form = site.util.serializeForm($(this));
+		var form = jien.util.serializeForm($(this));
 		$.post("/auth/login", form, function(res){
 			if(res.status.code == 200){
 				window.location.href = '/admin/dashboard';	
 			}else{
-				alert('invalid user/pass');
+				$().toastmessage('showErrorToast', 'Wrong username/password. Pleas try again.');
 				$('#login_form input[name=username]').focus();
 			}
 			
