--- a/application/views/scripts/admin/user.phtml
+++ b/application/views/scripts/admin/user.phtml
@@ -35,7 +35,7 @@
 		
 		<div class="row">
 		  	<div class="span12">
-		  		<form action="/admin/save" method="POST">
+		  		<form class="trig_save" action="/admin/data" method="POST">
 		  			<input type="hidden" name="model" value="<?php echo $this->model; ?>">
 		  			<input type="hidden" name="id" value="<?php echo $this->params('id'); ?>">
 			        <fieldset>
