--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,7 +1,3 @@
-Hello World!!
-<?php if(!empty($this->data['paginator'])) echo $this->paginationControl($this->data['paginator'], 'Sliding', 'pagination.phtml'); ?>
-<?php
-Jien::debug($this->data['records']);
-Jien::outputDbProfiler();
-?>
+<h3>Hello world</h3>
 
+<p>Jien Framework is launching soon</p>
