--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,3 +1,7 @@
 <h3>Hello world</h3>
 
 <p>Jien Framework is launching soon</p>
+
+<p><a href="/admin">Check out our admin</a></p>
+
+<p>login: admin / demo</p>
