--- a/application/views/scripts/admin/pages.phtml
+++ b/application/views/scripts/admin/pages.phtml
@@ -10,6 +10,10 @@
 		  	</h3>
 		</div>
 		
+		<?php 
+		Jien::debug($this->data);
+		?>
+		
 		<div class="row">
 		  	<div class="span12">
 		    	<?php echo $this->paginator($this->data, true); ?>
@@ -24,6 +28,7 @@
 			          <tr>
 			            <th class="header">#</th>
 			            <th class="header">Username</th>
+			            <th class="header">Url</th>
 			            <th class="header">Title</th>
 			            <th class="header">Content</th>
 			            <th class="header">Created</th>
@@ -35,8 +40,9 @@
 			        <tr>
 			            <td><?php echo $value['page_id']; ?></td>
 			            <td><?php echo $value['username']; ?></td>
-			            <td><?php echo $value['page_title']; ?></td>
-			            <td><?php echo $value['page_content']; ?></td>
+			            <td><?php echo $value['url']; ?></td>
+			            <td><?php echo $value['title']; ?></td>
+			            <td><?php echo $value['content']; ?></td>
 			            <td><?php echo date("m/d/y", strtotime($value['created'])); ?></td>
 			            <td>
 			            	<a href="/admin/<?php echo strtolower($this->model); ?>/id/<?php echo $value[strtolower($this->model).'_id']; ?>" class="btn blue">Edit</a>
