--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -14,7 +14,8 @@
 	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-popover.js" type="text/javascript"></script>
 	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-tabs.js" type="text/javascript"></script>
 	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-modal.js" type="text/javascript"></script>
-	
+	<script src="/js/admin/admin.php" type="text/javascript"></script>
+
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
 	<link rel="stylesheet" href="http://static.jquery.com/ui/css/demo-docs-theme/ui.theme.css" type="text/css" media="all" />
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
@@ -83,69 +84,8 @@
 	<!--domready javascript-->
   	<script>
   	
-  	/** onready events **/
   	
-  	// enable dropdown
-  	$('#profile').dropdown();
-
-  	// enable active menu highlighting
-  	$('#main_menu li').removeClass('active');
-  	
-  	// login event
-  	$('#login_form').submit(function(e){
-		e.preventDefault();
-		var form = site.util.serializeForm($(this));
-		$.post("/auth/login", form, function(res){
-			if(res.result.code == 200){
-				window.location.href = '/admin/dashboard';	
-			}else{
-				alert('invalid user/pass');
-				$('#login_form input[name=username]').focus();
-			}
-			
-		});
-  	});
-  	
-  	// logout event
-  	$('.trig_logout').click(function(e){
-  		e.preventDefault();
-  		$.post("/auth/logout", function(res){
-  			window.location.href = '/admin';
-  		});
-  	});
-  	
-  	// save form event
-  	$('form.trig_save').submit(function(e){
-		e.preventDefault();
-		var data = jien.util.serializeForm(this);
-		$.post("/admin/data", data, function(res){
-			if(res.status.code == 200){
-				jien.ui.growl('Saved!');
-				history.go(-1);
-			}else{
-				jien.ui.growl(res.status.text, 'error');
-			}
-		});
-  	});
-  	
-  	// delete event
-  	$('a.trig_delete').click(function(e){
-  		e.preventDefault();
-  		var c = confirm('Are you sure?');
-  		if(c){
-	  		var opts = jien.util.parseRel($(this).attr('rel'));
-	  		opts.cmd = 'delete';
-	  		var self = this;
-	  		$.post("/admin/data", opts, function(res){
-	  			if(res.status.code == 200){
-	  				jien.ui.growl('Deleted');
-	  				$(self).parent().parent().slideUp();
-	  			}else{
-	  				jien.ui.growl(res.status.text, 'error');
-	  			}
-	  		});
-  		}
-  	});
+    
   	
   	</script>
   	
