--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Jien</title>
-	
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
 	<script src="/js/jien.js" type="text/javascript"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
@@ -14,6 +14,8 @@
 	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-popover.js" type="text/javascript"></script>
 	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-tabs.js" type="text/javascript"></script>
 	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-modal.js" type="text/javascript"></script>
+	<script src="/js/ckeditor/ckeditor.js" type="text/javascript"></script>
+	<script src="/js/ckeditor/adapters/jquery.js" type="text/javascript"></script>
 	<script src="/js/admin/admin.php" type="text/javascript"></script>
 
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
@@ -22,14 +24,14 @@
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/docs.css">
 	<link rel="stylesheet" href="/css/admin.css">
 	<link rel="stylesheet" href="/css/pagination.css">
-	
+
 	<script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
 
 </head>
 
  <body>
- 
+
     <div class="topbar">
       <div class="fill">
         <div class="container">
@@ -39,8 +41,9 @@
             <li><a href="/admin/users">Users</a></li>
             <li><a href="/admin/posts">Posts</a></li>
             <li><a href="/admin/pages">Pages</a></li>
+            <li><a href="/admin/contacts">Contacts</a></li>
           </ul>
-          
+
           <?php if(!empty($_SESSION['user'])){ ?>
           <ul id="profile" class="nav secondary-nav">
             <li class="dropdown">
@@ -71,28 +74,16 @@
 
     <div id="main" class="main">
     	<div class="container">
-			<?php echo $this->layout()->content; ?>	
+			<?php echo $this->layout()->content; ?>
 		</div>
 	</div>
-	
-	<div class="container" style="padding-left: 40px;">
-	    	<p> Powered by Jien Framework &copy; All rights reserved.</p>
+
+	<div class="container" style="padding-left: 10px;">
+		<p> Powered by Jien Framework &copy; All rights reserved.</p>
 	</div>
-    
-	
-	
-	<!--domready javascript-->
-  	<script>
-  	
-  	
-    
-  	
-  	</script>
-  	
-  	
-  	
-    
+
+
   </body>
-  
-	
+
+
 </html>
