--- a/application/views/adventure/blog/index.phtml
+++ b/application/views/adventure/blog/index.phtml
@@ -1,4 +1,3 @@
-
 			<div id="content">
 				<div class="one">
 					<!-- COLUMNS CONTAINER STARTS-->
@@ -140,8 +139,10 @@
 
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'jienlocal'; // required: replace example with your forum shortname
+var disqus_shortname = '<?php echo DISQUS_ID; ?>'; // required: replace example with your forum shortname
+<?php if(APPLICATION_ENV != 'prod'){ ?>
 var disqus_developer = 1;
+<?php } ?>
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function () {
