--- a/application/views/adventure/blog/post.phtml
+++ b/application/views/adventure/blog/post.phtml
@@ -38,8 +38,10 @@ $record = $this->data;
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'jienlocal'; // required: replace example with your forum shortname
-    var disqus_developer = 1;
+    var disqus_shortname = '<?php echo DISQUS_ID; ?>'; // required: replace example with your forum shortname
+	<?php if(APPLICATION_ENV != 'prod'){ ?>
+	var disqus_developer = 1;
+	<?php } ?>
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
