fixed some contact info

--- a/application/layouts/scripts/adventure.phtml
+++ b/application/layouts/scripts/adventure.phtml
@@ -1,12 +1,9 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Adventure - Clean &amp; Simple Template</title>
-<meta name="description" content="Clean &amp; Simple Template - Adventure"/>
-<meta name="keywords" content=""/>
-<!--META KEYWORDS-->
-<meta name="author" content="trendyWebstar"/>
+<title><?php echo $this->title; ?></title>
+
 <!--CSS FILES STARTS-->
 <link rel="shortcut icon" type="image/gif" href="/themes/adventure/images/favicon.gif"/>
 <link rel="stylesheet" href="/themes/adventure/css/prettyPhoto.css" type="text/css" media="screen"/>
