--- a/application/views/adventure/contact/index.phtml
+++ b/application/views/adventure/contact/index.phtml
@@ -17,13 +17,13 @@
 						<strong>Our  offices</strong>
 					</p>
 					<p>
-						 Interposito brutis aeterna<br/> Sanctae Athenagora, P.O 98765 <br/> Some Country
+						 Guild of the Leather Apron<br/> 123 Main st. #123<br/> Los Angeles, CA, 91200 <br/>
 					</p>
 					<p>
 						<strong>Contact Info</strong>
 					</p>
 					<p style="margin-bottom:0;">
-						 T: + (0) 000-1234-5678 <br/> F: + (0) 000-1234-5678 <br/> E: <a href="#">yourmail@yoursite.com</a>
+						 T: 1 (213) 123-1234 <br/> F: 1 (213) 123-1234 <br/> E: <a href="mailto:jaequery@gmail.com">jaequery@gmail.com</a>
 					</p>
 				</div>
 				<div class="inner-content last">
