modified date to word month

--- a/application/views/adventure/blog/index.phtml
+++ b/application/views/adventure/blog/index.phtml
@@ -19,7 +19,7 @@
 						</p>-->
 						<!--POST IMAGE-->
 						<p>
-							 Posted by: <a href="/user/profile/id/<?php echo $record['user_id']; ?>"><?php echo $record['username']; ?></a> on <?php echo date("m/d/y", strtotime($record['created'])); ?> | <a href="/blog/post/id/<?php echo $record['post_id']; ?>#disqus_thread">Loading ...</a>
+							 Posted by: <a href="/user/profile/id/<?php echo $record['user_id']; ?>"><?php echo $record['username']; ?></a> on <?php echo date("F, d, Y", strtotime($record['created'])); ?> | <a href="/blog/post/id/<?php echo $record['post_id']; ?>#disqus_thread">Loading ...</a>
 						</p>
 						<!--POST DETAILS-->
 						<!--POST INTRO-->
