--- a/application/views/adventure/blog/post.phtml
+++ b/application/views/adventure/blog/post.phtml
@@ -34,8 +34,22 @@ $record = $this->data;
 						<div class="horizontal-line">
 						</div>
 
+						<div class="fb-comments" data-href="jien.local" data-num-posts="2" data-width="500"></div>
+
 						<!-- DISQUS -->
 <div id="disqus_thread"></div>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a></script>
+
+					</div>
+
+					<div class="one-fourth last">
+						<?php echo $this->partial('partials/side.phtml'); ?>
+					</div>
+					<!-- COLUMNS CONTAINER ENDS-->
+				</div>
+
+
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = '<?php echo DISQUS_ID; ?>'; // required: replace example with your forum shortname
@@ -58,95 +72,3 @@ $record = $this->data;
 	    (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
 	}());
 </script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a></script>
-
-					</div>
-
-					<div class="one-fourth last">
-						<span class="colored">CLEAN &amp; SIMPLE TEMPLATE</span>
-						<p>
-							 Arripuit plorabis filiam vel regio hinc indica enim materiam. Crede respiciens forsitan Apollonius ut libertatem accipies. Addicitur quid populi civitatis ne videret famis perisse naufrago in lucem in modo genito in lucem exitum atque album Apolloni sed.
-						</p>
-						<p>
-							 Viam iube meae ceroma fronte comico hac auxilium volo, interea applicuit defunctam lacrimis V signa ad nomine. Dionysiadem in modo ad te ad per sanctus singulo.
-						</p>
-						<form id="blog-search" method="get" action="#">
-							<fieldset>
-								<input id="blog-search-input" class="text" type="text" onblur="if(this.value=='')this.value='Type and hit enter';" onfocus="if(this.value=='Type and hit enter')this.value='';" value="Type and hit enter"/>
-							</fieldset>
-						</form>
-						<div class="horizontal-line">
-						</div>
-						<h4 class="blog-category">Our Categories</h4>
-						<ul class="simple-nav">
-							<!--SIMPLE UL -->
-							<li><a href="about-us.html">Design</a> (21)</li>
-							<li><a href="our-team.html">Programming</a> (28)</li>
-							<li><a href="career.html">Video Manipulation</a> (9)</li>
-							<li><a href="services-item.html">Freebies</a> (32)</li>
-							<li><a href="testimonials.html">Typography</a> (14)</li>
-							<li><a href="blog.html">Inspiration</a> (34)</li>
-							<li><a href="portfolio-four-columns.html">Other Topics</a> (38)</li>
-						</ul>
-						<div class="horizontal-line">
-						</div>
-						<h4 class="blog-category">Latest Posts</h4>
-						<ul>
-							<!-- LATEST POSTS UL-->
-							<li>
-							<a href="blog.html">Praesent convallis metus imperdiet the dui posuere.</a>
-							<p>
-								<span>April 16, 2011 · <a href="blog.html">14 Comments</a></span>
-							</p>
-							</li>
-							<li>
-							<a href="blog.html">Praesent convallis metus imperdiet the dui posuere.</a>
-							<p>
-								<span>March 19, 2011 · <a href="blog.html">68 Comments</a></span>
-							</p>
-							</li>
-							<li>
-							<a href="blog.html">Praesent convallis metus imperdiet the dui posuere.</a>
-							<p>
-								<span>March 12, 2011 · <a href="blog.html">24 Comments</a></span>
-							</p>
-							</li>
-							<li>
-							<a href="blog.html">Praesent convallis metus imperdiet the dui posuere.</a>
-							<p>
-								<span>December 22, 2010 · <a href="blog.html">8 Comments</a></span>
-							</p>
-							</li>
-						</ul>
-						<div class="horizontal-line">
-						</div>
-						<h4 class="blog-category">Recent Comments</h4>
-
-						<ul>
-							<!-- LATEST POSTS UL-->
-							<li>
-							<p>
-								 John Doe on <a href="blog.html">Praesent Esse haecthe dui posuere Nuntiatur ad.</a>
-							</p>
-							</li>
-							<li>
-							<p>
-								 John Doe on <a href="blog.html">Praesent Esse haecthe dui posuere Nuntiatur ad.</a>
-							</p>
-							</li>
-							<li>
-							<p>
-								 John Doe on <a href="blog.html">Praesent Esse haecthe dui posuere Nuntiatur ad.</a>
-							</p>
-							</li>
-							<li>
-							<p>
-								 John Doe on <a href="blog.html">Praesent Esse haecthe dui posuere Nuntiatur ad.</a>
-							</p>
-							</li>
-						</ul>
-					</div>
-					<!-- COLUMNS CONTAINER ENDS-->
-				</div>
-
