--- a/application/views/adventure/blog/index.phtml
+++ b/application/views/adventure/blog/index.phtml
@@ -1,3 +1,4 @@
+
 			<div id="content">
 				<div class="one">
 					<!-- COLUMNS CONTAINER STARTS-->
@@ -11,29 +12,26 @@
 				<div class="one">
 					<div class="inner-content">
 
-					<?php foreach($this->data['records'] AS $key=>$record){ ?>
-						<h3><a href="/blog/post/id/<?php echo $record['post_id']; ?>"><?php echo $record['subject']; ?></a></h3>
-						<!--POST TITLE-->
-						<!--<p>
-							<img src="/themes/adventure/images/portfolio/blog-1.jpg" alt=" " width="710" height="210"/>
-						</p>-->
-						<!--POST IMAGE-->
-						<p>
-							 Posted by: <a href="/user/profile/id/<?php echo $record['user_id']; ?>"><?php echo $record['username']; ?></a> on <?php echo date("F, d, Y", strtotime($record['created'])); ?> | <a href="/blog/post/id/<?php echo $record['post_id']; ?>#disqus_thread">Loading ...</a>
-						</p>
-						<!--POST DETAILS-->
-						<!--POST INTRO-->
-						<p>
-							 <?php echo $record['message']; ?>
-							 <div style="clear:both;"></div>
-						</p>
-						<a href="/blog/post/id/<?php echo $record['post_id']; ?>#disqus_thread" data-disqus-identifier="<?php echo 'post_' . $record['post_id']; ?>">Read This Article</a>
+					<?php if($this->data['records']){ ?>
 
-						<!--POST LINK-->
-						<div class="horizontal-line">
-						</div>
+							<?php foreach($this->data['records'] AS $key=>$record){ ?>
+								<h3><a href="/blog/post/id/<?php echo $record['post_id']; ?>"><?php echo $record['subject']; ?></a></h3>
+								<p>
+									 Posted by: <a href="/user/profile/id/<?php echo $record['user_id']; ?>"><?php echo $record['username']; ?></a> on <?php echo date("F, d, Y", strtotime($record['created'])); ?> | <a href="/blog/post/id/<?php echo $record['post_id']; ?>#disqus_thread">Loading ...</a>
+								</p>
+								<!--POST DETAILS-->
+								<!--POST INTRO-->
+								<p>
+									 <?php echo $record['message']; ?>
+									 <div style="clear:both;"></div>
+								</p>
+								<a href="/blog/post/id/<?php echo $record['post_id']; ?>">Read This Article</a>
 
-					<?php } ?>
+								<!--POST LINK-->
+								<div class="horizontal-line">
+								</div>
+
+							<?php } ?>
 
 
 						<!--PAGINATION-->
@@ -50,89 +48,22 @@
 							<li><a href="#">Next</a></li>
 						</ul>-->
 						<!--PAGINATION ENDS-->
+
+
+					<?php }else{ ?>
+
+						<h3>There are no records found</h3>
+						<p>
+							Please refine your search keyword and try again ...
+						</p>
+
+					<?php } ?>
+
+
+
 					</div>
 					<div class="one-fourth last">
-						<span class="colored">CLEAN &amp; SIMPLE TEMPLATE</span>
-						<p>
-							 Arripuit plorabis filiam vel regio hinc indica enim materiam. Crede respiciens forsitan Apollonius ut libertatem accipies. Addicitur quid populi civitatis ne videret famis perisse naufrago in lucem in modo genito in lucem exitum atque album Apolloni sed.
-						</p>
-						<p>
-							 Viam iube meae ceroma fronte comico hac auxilium volo, interea applicuit defunctam lacrimis V signa ad nomine. Dionysiadem in modo ad te ad per sanctus singulo.
-						</p>
-						<form id="blog-search" method="get" action="#">
-							<fieldset>
-								<input id="blog-search-input" class="text" type="text" onblur="if(this.value=='')this.value='Type and hit enter';" onfocus="if(this.value=='Type and hit enter')this.value='';" value="Type and hit enter"/>
-							</fieldset>
-						</form>
-						<div class="horizontal-line">
-						</div>
-						<h4 class="blog-category">Our Categories</h4>
-						<ul class="simple-nav">
-							<!--SIMPLE UL -->
-							<li><a href="about-us.html">Design</a> (21)</li>
-							<li><a href="our-team.html">Programming</a> (28)</li>
-							<li><a href="career.html">Video Manipulation</a> (9)</li>
-							<li><a href="services-item.html">Freebies</a> (32)</li>
-							<li><a href="testimonials.html">Typography</a> (14)</li>
-							<li><a href="blog.html">Inspiration</a> (34)</li>
-							<li><a href="portfolio-four-columns.html">Other Topics</a> (38)</li>
-						</ul>
-						<div class="horizontal-line">
-						</div>
-						<h4 class="blog-category">Latest Posts</h4>
-						<ul>
-							<!-- LATEST POSTS UL-->
-							<li>
-							<a href="blog.html">Praesent convallis metus imperdiet the dui posuere.</a>
-							<p>
-								<span>April 16, 2011 · <a href="blog.html">14 Comments</a></span>
-							</p>
-							</li>
-							<li>
-							<a href="blog.html">Praesent convallis metus imperdiet the dui posuere.</a>
-							<p>
-								<span>March 19, 2011 · <a href="blog.html">68 Comments</a></span>
-							</p>
-							</li>
-							<li>
-							<a href="blog.html">Praesent convallis metus imperdiet the dui posuere.</a>
-							<p>
-								<span>March 12, 2011 · <a href="blog.html">24 Comments</a></span>
-							</p>
-							</li>
-							<li>
-							<a href="blog.html">Praesent convallis metus imperdiet the dui posuere.</a>
-							<p>
-								<span>December 22, 2010 · <a href="blog.html">8 Comments</a></span>
-							</p>
-							</li>
-						</ul>
-						<div class="horizontal-line">
-						</div>
-						<h4 class="blog-category">Recent Comments</h4>
-						<ul>
-							<!-- LATEST POSTS UL-->
-							<li>
-							<p>
-								 John Doe on <a href="blog.html">Praesent Esse haecthe dui posuere Nuntiatur ad.</a>
-							</p>
-							</li>
-							<li>
-							<p>
-								 John Doe on <a href="blog.html">Praesent Esse haecthe dui posuere Nuntiatur ad.</a>
-							</p>
-							</li>
-							<li>
-							<p>
-								 John Doe on <a href="blog.html">Praesent Esse haecthe dui posuere Nuntiatur ad.</a>
-							</p>
-							</li>
-							<li>
-							<p>
-								 John Doe on <a href="blog.html">Praesent Esse haecthe dui posuere Nuntiatur ad.</a>
-							</p>
-							</li>
-						</ul>
+						<?php echo $this->partial('partials/side.phtml'); ?>
 					</div>
 					<!-- COLUMNS CONTAINER ENDS-->
 				</div>
