fixed some config

--- a/application/layouts/scripts/adventure.phtml
+++ b/application/layouts/scripts/adventure.phtml
@@ -70,6 +70,9 @@
 
 
 <!--JS FILES STARTS-->
+<script>
+var twitter_id = "<?php echo TWITTER_ID; ?>";
+</script>
 <script type="text/javascript" src="/themes/adventure/js/jquery.min.js"></script>
 <script type="text/javascript" src="/themes/adventure/js/custom.js"></script>
 <script type="text/javascript" src="/themes/adventure/js/slides/slides.min.jquery.js"></script>
