--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -47,7 +47,7 @@
           <?php if(!empty($_SESSION['user'])){ ?>
           <ul id="profile" class="nav secondary-nav">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle">jaequery</a>
+              <a href="#" class="dropdown-toggle"><?php echo $_SESSION['user']->username; ?></a>
               <ul class="dropdown-menu">
               	<li><a href="/admin/user/id/<?php echo $_SESSION['user']->user_id; ?>">Settings</a></li>
                 <li><a href="/auth/logout" class='trig_logout'>Log-out</a></li>
