added twitter follow us link

--- a/application/layouts/scripts/adventure.phtml
+++ b/application/layouts/scripts/adventure.phtml
@@ -236,7 +236,7 @@ var twitter_id = "<?php echo TWITTER_ID; ?>";
 									<ul class="social-links">
 										<!-- SOCIAL LINKS STARTS-->
 										<li><img src="/themes/adventure/images/icons/facebook.png" width="16" height="16" alt="#"/><a href="#">Our Facebook page</a></li>
-										<li><img src="/themes/adventure/images/icons/twitter.png" width="16" height="16" alt="#"/><a href="#">Follow us on Twitter</a></li>
+										<li><img src="/themes/adventure/images/icons/twitter.png" width="16" height="16" alt="#"/><a href="http://www.twitter.com/<?php echo TWITTER_ID; ?>" target="_BLANK">Follow us on Twitter</a></li>
 										<li><img src="/themes/adventure/images/icons/rss.png" width="16" height="16" alt="#"/><a href="#">Our RSS Feeds</a></li>
 										<li><img src="/themes/adventure/images/icons/vimeo.png" width="16" height="16" alt="#"/><a href="#">Our Vimeo Videos</a></li>
 									</ul>
