jien-46 jien-42 added category materialized tree

--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -41,6 +41,7 @@
             <li><a href="/admin/users">Users</a></li>
             <li><a href="/admin/posts">Posts</a></li>
             <li><a href="/admin/pages">Pages</a></li>
+            <li><a href="/admin/categories">Categories</a></li>
             <li><a href="/admin/contacts">Contacts</a></li>
           </ul>
 
