--- a/application/views/default/admin/category.phtml
+++ b/application/views/default/admin/category.phtml
@@ -1,3 +1,14 @@
+<?php
+$categories = Jien::model("Category")->orderBy("category.category_id ASC")->getAll();
+$category_dropdown = "<select name='parent_id'>";
+$category_dropdown .= "<option value='0'></option>";
+foreach($categories['records'] AS $category){
+	$sel = '';
+	$category_dropdown .= "<option {$sel} value='{$category['category_id']}'>{$category['category']}</option>";
+}
+$category_dropdown .= "</select>";
+?>
+
 <div class="left" style="width:20%;">
 
 	<div class="content">
@@ -38,43 +49,32 @@
 		  		<form class="trig_save" action="/admin/data" method="POST">
 		  			<input type="hidden" name="model" value="<?php echo $this->model; ?>">
 		  			<input type="hidden" name="id" value="<?php echo $this->params('id'); ?>">
-		  			<input type="hidden" name="user_id" value="<?php echo !empty($this->data['user_id']) ? $this->data['user_id'] : $_SESSION['user']->user_id; ?>">
+
 			        <fieldset>
 
 						<legend><a name="basic_info"></a> Basic info</legend>
 
-						<?php if(!empty($this->data['username'])){ ?>
 						<div class="clearfix">
-							<label for="xlInput">Username</label>
+							<label for="xlInput">Type</label>
 							<div class="input">
-								<input type="text" class="medium disabled" disabled value="<?php echo $this->data['username']; ?>">
+								<input class='large' name='type' value="<?php echo !empty($this->data['type']) ? $this->data['type'] : 'Post'; ?>" type='text'>
 							</div>
 						</div>
-						<?php } ?>
+
+						<div class="clearfix">
+							<label for="xlInput">Parent</label>
+							<div class="input">
+								<?php echo $category_dropdown; ?>
+							</div>
+						</div>
 
 						<div class="clearfix">
 							<label for="xlInput">Category</label>
 							<div class="input">
-								<select name='category_id'>
-									<?php echo $this->CategoryDropdown('Post', $this->data['category_id']); ?>
-								</select>
-
+								<input class='large' name='category' value="<?php echo !empty($this->data['category']) ? $this->data['category'] : ''; ?>" type='text'>
 							</div>
 						</div>
 
-						<div class="clearfix">
-							<label for="xlInput">Subject</label>
-							<div class="input">
-								<input class='xxlarge' name='subject' value="<?php echo !empty($this->data['subject']) ? $this->data['subject'] : ''; ?>" type='text'>
-							</div>
-						</div>
-
-						<div class="clearfix">
-							<label for="xlInput">Message</label>
-							<div class="input">
-								<textarea name="message" rows='5' class='xxlarge wysiwyg'><?php echo !empty($this->data['message']) ? $this->data['message'] : ''; ?></textarea>
-							</div>
-						</div>
 
 			        </fieldset>
 
