--- a/application/views/default/admin/category.phtml
+++ b/application/views/default/admin/category.phtml
@@ -2,7 +2,7 @@
 $categories = Jien::model("Category")->orderBy("category.category_id ASC")->getAll();
 $category_dropdown = "<select name='parent_id'>";
 $category_dropdown .= "<option value='0'></option>";
-foreach($categories['records'] AS $category){
+foreach($categories->dataset AS $category){
 	$sel = '';
 	$category_dropdown .= "<option {$sel} value='{$category['category_id']}'>{$category['category']}</option>";
 }
@@ -57,7 +57,7 @@ $category_dropdown .= "</select>";
 						<div class="clearfix">
 							<label for="xlInput">Type</label>
 							<div class="input">
-								<input class='large' name='type' value="<?php echo !empty($this->data['type']) ? $this->data['type'] : 'Post'; ?>" type='text'>
+								<input class='large' name='type' value="<?php echo !empty($this->data->dataset['type']) ? $this->data->dataset['type'] : 'Post'; ?>" type='text'>
 							</div>
 						</div>
 
@@ -71,7 +71,7 @@ $category_dropdown .= "</select>";
 						<div class="clearfix">
 							<label for="xlInput">Category</label>
 							<div class="input">
-								<input class='large' name='category' value="<?php echo !empty($this->data['category']) ? $this->data['category'] : ''; ?>" type='text'>
+								<input class='large' name='category' value="<?php echo !empty($this->data->dataset['category']) ? $this->data->dataset['category'] : ''; ?>" type='text'>
 							</div>
 						</div>
 
