--- a/application/views/default/admin/form.phtml
+++ b/application/views/default/admin/form.phtml
@@ -108,8 +108,8 @@
 			          				break;
 			          			}
 			          			$value = '';
-			          			if($this->data){
-			          				$value = $this->data[$field];
+			          			if($this->data->dataset){
+			          				$value = $this->data->dataset[$field];
 			          			}
 
 			          			$input = "";
