--- a/application/layouts/scripts/admin-loggedout.phtml
+++ b/application/layouts/scripts/admin-loggedout.phtml
@@ -2,38 +2,46 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Jien</title>
-	
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+	<title><?php echo $this->title ?></title>
+
+	<!-- jquery -->
+	<script src="/js/jquery.min.js" type="text/javascript"></script>
+
+	<!-- jquery ui -->
+	<script src="/js/plugins/ui/jquery-ui.min.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="/js/plugins/ui/jquery-ui.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="/js/plugins/ui/ui.theme.css" type="text/css" media="all" />
+
+	<!-- jien lib -->
 	<script src="/js/jien.js" type="text/javascript"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-dropdown.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-twipsy.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-scrollspy.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-alerts.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-popover.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-tabs.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-modal.js" type="text/javascript"></script>
-	
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="http://static.jquery.com/ui/css/demo-docs-theme/ui.theme.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
-	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/docs.css">
-	<link rel="stylesheet" href="/css/admin.css">
-	<link rel="stylesheet" href="/css/pagination.css">
-	
+
+	<!-- ckeditor -->
+	<script src="/js/ckeditor/ckeditor.js" type="text/javascript"></script>
+	<script src="/js/ckeditor/adapters/jquery.js" type="text/javascript"></script>
+
+	<!-- plugins -->
 	<script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
+
+	<!-- bootstrap css -->
+	<script src="/themes/admin/js/bootstrap-combined.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="/themes/admin/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/themes/admin/css/docs.css">
+
+	<!-- admin -->
+	<link rel="stylesheet" href="/themes/admin/css/admin.css">
+	<link rel="stylesheet" href="/css/pagination.css">
+	<script src="/themes/admin/js/admin.php" type="text/javascript"></script>
 
 </head>
 
  <body>
- 
+
     <div class="topbar">
       <div class="fill">
         <div class="container">
           <a class="brand" href="/admin">Jien Framework</a>
-          
+
           <form action="/auth/login" method="POST" id="login_form" class="pull-right">
             <input class="input-small" type="text" placeholder="username" name="username">
             <input class="input-small" type="password" placeholder="password" name="password">
@@ -48,49 +56,49 @@
       </div>
     </div>
 
-	<?php echo $this->layout()->content; ?>	
-	
+	<?php echo $this->layout()->content; ?>
+
 	<div class="container" style='padding-top: 10px;'>
 	  	<footer>
 	    	<p>&copy; Powered by Jien Framework. All rights reserved.</p>
 	  	</footer>
 	</div>
-    
-	
-	
+
+
+
 	<!--domready javascript-->
   	<script>
   	$('#profile').dropdown();
-  	
+
   	$('#login_form').submit(function(e){
 		e.preventDefault();
 		var form = jien.util.serializeForm($(this));
 		$.post("/auth/login", form, function(res){
 			if(res.status.code == 200){
-				window.location.href = '/admin/dashboard';	
+				window.location.href = '/admin/dashboard';
 			}else{
 				$().toastmessage('showErrorToast', 'Wrong username/password. Pleas try again.');
 				$('#login_form input[name=username]').focus();
 			}
-			
+
 		});
   	});
-  	
+
   	$('.trig_logout').click(function(e){
   		e.preventDefault();
   		$.post("/auth/logout", function(res){
   			window.location.href = '/admin';
   		});
   	});
-  	
-  	
-  	
+
+
+
   	// highlight active menu
   	$('#main_menu li').removeClass('active');
-  	
+
   	</script>
-    
+
   </body>
-  
-	
+
+
 </html>
