--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -4,29 +4,28 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title><?php echo $this->title ?></title>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+	<!-- libs -->
+	<script src="/js/jquery.min.js" type="text/javascript"></script>
+	<script src="/js/plugins/ui/jquery-ui.min.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="/js/plugins/ui/jquery-ui.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="/js/plugins/ui/ui.theme.css" type="text/css" media="all" />
 	<script src="/js/jien.js" type="text/javascript"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-dropdown.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-twipsy.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-scrollspy.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-alerts.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-popover.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-tabs.js" type="text/javascript"></script>
-	<script src="http://twitter.github.com/bootstrap/1.3.0/bootstrap-modal.js" type="text/javascript"></script>
 	<script src="/js/ckeditor/ckeditor.js" type="text/javascript"></script>
 	<script src="/js/ckeditor/adapters/jquery.js" type="text/javascript"></script>
-	<script src="/js/admin/admin.php" type="text/javascript"></script>
 
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="http://static.jquery.com/ui/css/demo-docs-theme/ui.theme.css" type="text/css" media="all" />
-	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
-	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/docs.css">
-	<link rel="stylesheet" href="/css/admin.css">
-	<link rel="stylesheet" href="/css/pagination.css">
-
+	<!-- plugins -->
 	<script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
+
+	<!-- bootstrap css -->
+	<script src="/themes/admin/js/bootstrap-combined.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="/themes/admin/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/themes/admin/css/docs.css">
+
+	<!-- admin -->
+	<script src="/themes/admin/js/admin.php" type="text/javascript"></script>
+	<link rel="stylesheet" href="/themes/admin/css/admin.css">
+	<link rel="stylesheet" href="/css/pagination.css">
 
 </head>
 
