--- a/application/views/default/admin/pages.phtml
+++ b/application/views/default/admin/pages.phtml
@@ -31,7 +31,7 @@
 			          </tr>
 			        </thead>
 			        <tbody>
-			        <?php foreach($this->data['records'] AS $key=>$value){ ?>
+			        <?php foreach($this->data->dataset AS $key=>$value){ ?>
 			        <tr>
 			            <td><?php echo $value['page_id']; ?></td>
 			            <td><?php echo $value['username']; ?></td>
