--- a/application/views/default/admin/post.phtml
+++ b/application/views/default/admin/post.phtml
@@ -38,16 +38,16 @@
 		  		<form class="trig_save" action="/admin/data" method="POST">
 		  			<input type="hidden" name="model" value="<?php echo $this->model; ?>">
 		  			<input type="hidden" name="id" value="<?php echo $this->params('id'); ?>">
-		  			<input type="hidden" name="user_id" value="<?php echo !empty($this->data['user_id']) ? $this->data['user_id'] : $_SESSION['user']->user_id; ?>">
+		  			<input type="hidden" name="user_id" value="<?php echo !empty($this->data->dataset['user_id']) ? $this->data->dataset['user_id'] : $_SESSION['user']->user_id; ?>">
 			        <fieldset>
 
 						<legend><a name="basic_info"></a> Basic info</legend>
 
-						<?php if(!empty($this->data['username'])){ ?>
+						<?php if(!empty($this->data->dataset['username'])){ ?>
 						<div class="clearfix">
 							<label for="xlInput">Username</label>
 							<div class="input">
-								<input type="text" class="medium disabled" disabled value="<?php echo $this->data['username']; ?>">
+								<input type="text" class="medium disabled" disabled value="<?php echo $this->data->dataset['username']; ?>">
 							</div>
 						</div>
 						<?php } ?>
@@ -56,7 +56,7 @@
 							<label for="xlInput">Category</label>
 							<div class="input">
 								<select name='category_id'>
-									<?php echo $this->CategoryDropdown('Post', $this->data['category_id']); ?>
+									<?php echo $this->CategoryDropdown('Post', $this->data->dataset['category_id']); ?>
 								</select>
 
 							</div>
@@ -65,14 +65,14 @@
 						<div class="clearfix">
 							<label for="xlInput">Subject</label>
 							<div class="input">
-								<input class='xxlarge' name='subject' value="<?php echo !empty($this->data['subject']) ? $this->data['subject'] : ''; ?>" type='text'>
+								<input class='xxlarge' name='subject' value="<?php echo !empty($this->data->dataset['subject']) ? $this->data->dataset['subject'] : ''; ?>" type='text'>
 							</div>
 						</div>
 
 						<div class="clearfix">
 							<label for="xlInput">Message</label>
 							<div class="input">
-								<textarea name="message" rows='5' class='xxlarge wysiwyg'><?php echo !empty($this->data['message']) ? $this->data['message'] : ''; ?></textarea>
+								<textarea name="message" rows='5' class='xxlarge wysiwyg'><?php echo !empty($this->data->dataset['message']) ? $this->data->dataset['message'] : ''; ?></textarea>
 							</div>
 						</div>
 
