--- a/application/views/default/admin/posts.phtml
+++ b/application/views/default/admin/posts.phtml
@@ -7,7 +7,7 @@
 
 		<div class="page-header">
 			<h3>
-		  		Listing all <?php echo $this->model; ?>s <small></small> <span class='right'><a href='/admin/<?php echo strtolower($this->model); ?>'>Add a <?php echo strtolower($this->model); ?></a></span>
+		  		Listing all <?php echo $this->model; ?>s <small></small> <span class='right'><a href='/admin/<?php echo strtolower($this->model); ?>?category_id=<?php echo $this->params('category_id'); ?>'>Add a <?php echo strtolower($this->model); ?></a></span>
 		  	</h3>
 		</div>
 
