--- a/application/views/default/admin/categories.phtml
+++ b/application/views/default/admin/categories.phtml
@@ -8,7 +8,7 @@
 
 		<div class="page-header">
 			<h3>
-		  		Listing all <?php echo $this->model; ?>s <small></small> <span class='right'><a href='/admin/<?php echo strtolower($this->model); ?>'>Add a <?php echo strtolower($this->model); ?></a></span>
+		  		Listing all <?php echo $this->model; ?>s <small></small> <span class='right'><a href='/admin/<?php echo strtolower($this->model); ?>?type=<?php echo $this->params('type'); ?>'>Add a <?php echo strtolower($this->model); ?></a></span>
 		  	</h3>
 		</div>
 
