--- a/application/views/default/admin/post.phtml
+++ b/application/views/default/admin/post.phtml
@@ -56,7 +56,7 @@
 							<label for="xlInput">Category</label>
 							<div class="input">
 								<select name='category_id'>
-									<?php echo $this->CategoryDropdown('Post', $this->data->dataset['category_id']); ?>
+									<?php echo $this->CategoryDropdown('Post', $this->params('category_id', $this->data->dataset['category_id'])); ?>
 								</select>
 
 							</div>
@@ -73,6 +73,18 @@
 							<label for="xlInput">Message</label>
 							<div class="input">
 								<textarea name="message" rows='5' class='xxlarge wysiwyg'><?php echo !empty($this->data->dataset['message']) ? $this->data->dataset['message'] : ''; ?></textarea>
+							</div>
+						</div>
+
+						<div class="clearfix">
+							<label for="xlInput">Status</label>
+							<div class="input">
+								<select name="status">
+									<?php echo $this->dropdownOptions(array(
+										"pending"	=>	"Pending",
+										"published"	=>	"Published",
+									), $this->data->dataset['status'], 'published'); ?>
+								</select>
 							</div>
 						</div>
 
