jien-11 added password hashing w/ bcrypt

--- a/application/views/default/admin/categories.phtml
+++ b/application/views/default/admin/categories.phtml
@@ -27,8 +27,7 @@
 							<?php echo $this->dropdownOptions(array(
 								"",
 								"Post"	=>	"Post",
-								"Page"	=>	"Page",
-							), $this->params('type'));
+							), $this->params('type', 'Post'));
 							?>
 						</select>
 					</p>
